--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 							<li><a href="#sponsors">Partenaires</a></li>
 							<li><a href="#how-it-works">Déroulement</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
+							<!--<li><a href="#coachs">Coachs</a>-->
 							<!--
 								<li><a href="#coachs">Coachs &amp; Jury</a>
 								<li><a href="#prizes">Prix</a>
@@ -93,7 +94,7 @@
 							<!-- HEADER ACTION BUTTON -->
 							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2016-27211092109" class="btn btn-primary">S'inscrire</a></li>
 							<li class="header-action-button"><a target="_blank" href="http://hic2016.sparkboard.com" class="btn btn-primary">Les défis</a></li>
-							<li class="header-action-button"><a target="_blank" href="http://2015.hackingindustry.camp" class="btn btn-primary">Édition 2015</a></li>
+							<!-- <li class="header-action-button"><a target="_blank" href="http://2015.hackingindustry.camp" class="btn btn-primary">Édition 2015</a></li> -->
 						</ul>
 
 					</nav>
@@ -399,6 +400,7 @@
 						<a href="http://www.strataggem.com/" target="_blank"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="http://innovationweek.fr/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>
 						<a href="http://marque.alsace/" target="_blank"><img src="images/contents/acoeur.png" alt="Marque Alsace"></a>
+						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
 						<!--<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>-->
 						<!--<a href="http://prworldmedia.com/" target="_blank"><img src="images/contents/prworldmedia.jpg" alt="PR World Media"></a>-->
@@ -571,6 +573,15 @@
 					<div class="team-row row">
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Tamim DAOUDI</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
 								<div class="team-member-text">
@@ -580,6 +591,42 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/arnaud-laprevote.jpg" alt="Arnaud LAPRÉVOTE">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Arnaud LAPRÉVOTE</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Manuel YGUEL</h4>
+								</div>
+							</div>
+						</div>-->
+
+						<!--<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/elalami-lafkih.jpg" alt="Elalami LAFKIH">
 								<div class="team-member-text">
@@ -628,14 +675,14 @@
 									<h4 class="team-member-name">Léo UNBEKANDT</h4>
 								</div>
 							</div>
-						</div>
+						</div>-->
 
-					</div>
+					<!--</div>
 
 				</div>
-			</section>
+			</section>-->
 
-			<section class="team-section section" style="padding-top: 0;">
+			<!--<section class="team-section section" style="padding-top: 0;">
 
 				<div class="container-fluid">
 					<div class="team-row row" style="margin-top: 0;">
