--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<li><a href="#sponsors">Partenaires</a></li>
 							<li><a href="#how-it-works">Déroulement</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
-							<!--<li><a href="#coachs">Coachs</a>-->
+							<li><a href="#coachs">Coachs</a>
 							<!--
 								<li><a href="#coachs">Coachs &amp; Jury</a>
 								<li><a href="#prizes">Prix</a>
@@ -564,7 +564,7 @@
 
 			<!-- TEAM
 			================================= -->
-			<!--<section id="coachs" class="team-section section">
+			<section id="coachs" class="team-section section">
 
 				<div class="container-fluid">
 					
@@ -574,6 +574,15 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Sabine CULLMANN">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Sabine CULLMANN</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Tamim DAOUDI</h4>
@@ -582,11 +591,20 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Yan-Erik DECORDE</h4>
 								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Yannick JOST</h4>
+								</div>								
 							</div>
 						</div>
 
@@ -607,24 +625,6 @@
 								</div>
 							</div>
 						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Manuel YGUEL</h4>
-								</div>
-							</div>
-						</div>-->
 
 						<!--<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
@@ -677,14 +677,32 @@
 							</div>
 						</div>-->
 
-					<!--</div>
+					</div>
 
 				</div>
-			</section>-->
+			</section>
 
-			<!--<section class="team-section section" style="padding-top: 0;">
+			<section class="team-section section" style="padding-top: 0;">
 
-				<div class="container-fluid">
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Manuel YGUEL</h4>
+						</div>
+					</div>
+				</div>
+
+				<!--<div class="container-fluid">
 					<div class="team-row row" style="margin-top: 0;">
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
@@ -729,14 +747,7 @@
 
 						<div class="hidden-md hidden-lg clear"></div>
 
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Yannick JOST</h4>
-								</div>								
-							</div>
-						</div>
+						
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
@@ -749,10 +760,10 @@
 
 					</div>
 
-				</div>
+				</div>-->
 			</section>
 
-			<section class="team-section section" style="padding-top: 0;">
+			<!-- <section class="team-section section" style="padding-top: 0;">
 
 				<div class="container-fluid">
 					<div class="team-row row" style="margin-top: 0;">
