add planning, update news

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 							</div>
 
 
-							<div class="newsbox col-md-10 col-md-offset-1">
+							<!-- <div class="newsbox col-md-10 col-md-offset-1">
 								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Événements organisés par nos partenaires (gratuits mais sur inscription)</div>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">									
@@ -164,7 +164,7 @@
 										<a class="btn btn-default btn-special" style="width: 100%;" href="http://www.creaccro.eu/event/fabrication-additive-creativcafe-8-29-septembre/" target="_blank">Creativ'Café #8 le 29/09 à 18h30</a>
 									</div>
 								</div>
-							</div>
+							</div> -->
 
 							<div class="hero-features row">
 
@@ -489,13 +489,13 @@
 
 			</section>
 
-			<!--<section id="planning" class="section">
+			<section id="planning" class="section">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Consulter le planning complet</a></div>
 					</div>
 				</div>
-			</section>-->
+			</section>
 
 			<section id="keynotes" class="section section-dark">
 				
