--- a/index.html
+++ b/index.html
@@ -574,6 +574,15 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/veronique-campillo.jpg" alt="Véronique CAMPILLO">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Véronique CAMPILLO</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Sabine CULLMANN">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Sabine CULLMANN</h4>
@@ -582,7 +591,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Tamim DAOUDI</h4>
@@ -591,7 +600,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Yan-Erik DECORDE</h4>
@@ -600,7 +609,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Yannick JOST</h4>
@@ -609,19 +618,10 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/arnaud-laprevote.jpg" alt="Arnaud LAPRÉVOTE">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Arnaud LAPRÉVOTE</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
 								</div>
 							</div>
 						</div>
@@ -659,14 +659,7 @@
 
 						<div class="hidden-md hidden-lg clear"></div>
 
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/aude-plassard.jpg" alt="Aude PLASSARD">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Aude PLASSARD</h4>
-								</div>
-							</div>
-						</div>
+						
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
@@ -686,6 +679,33 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Florian PETIT</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/aude-plassard.jpg" alt="Aude PLASSARD">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Aude PLASSARD</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
@@ -694,7 +714,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
