--- a/index.html
+++ b/index.html
@@ -574,6 +574,15 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/stephane-badts.jpg" alt="Stéphane BADTS">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Stéphane BADTS</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/veronique-campillo.jpg" alt="Véronique CAMPILLO">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Véronique CAMPILLO</h4>
@@ -582,7 +591,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Sabine CULLMANN">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Sabine CULLMANN</h4>
@@ -591,7 +600,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Tamim DAOUDI</h4>
@@ -600,7 +609,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Yan-Erik DECORDE</h4>
@@ -609,31 +618,15 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/olivier-gramling.jpg" alt="Olivier GRAMLING">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Yannick JOST</h4>
+									<h4 class="team-member-name">Olivier GRAMLING</h4>
 								</div>								
 							</div>
 						</div>
 
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/arnaud-laprevote.jpg" alt="Arnaud LAPRÉVOTE">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Arnaud LAPRÉVOTE</h4>
-								</div>
-							</div>
-						</div>
-
-						<!--<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/elalami-lafkih.jpg" alt="Elalami LAFKIH">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Elalami LAFKIH</h4>
-								</div>
-							</div>
-						</div>
+						<!--
 
 						<div class="hidden-md hidden-lg clear"></div>
 
@@ -679,45 +672,54 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
+						<img class="team-member-picture" src="images/contents/coach/marie-hunyadi.jpg" alt="Marie HUNYADI">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Florian PETIT</h4>
+							<h4 class="team-member-name">Marie HUNYADI</h4>
+						</div>								
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Yannick JOST</h4>
+						</div>								
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/elalami-lafkih.jpg" alt="Elalami LAFKIH">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Elalami LAFKIH</h4>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
+						<img class="team-member-picture" src="images/contents/coach/arnaud-laprevote.jpg" alt="Arnaud LAPRÉVOTE">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
+							<h4 class="team-member-name">Arnaud LAPRÉVOTE</h4>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/aude-plassard.jpg" alt="Aude PLASSARD">
+						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Aude PLASSARD</h4>
+							<h4 class="team-member-name">Axel NEVEUX</h4>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
+						<img class="team-member-picture" src="images/contents/coach/alban-petit.jpg" alt="Alban PETIT">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Manuel YGUEL</h4>
+							<h4 class="team-member-name">Alban PETIT</h4>
 						</div>
 					</div>
 				</div>
@@ -783,9 +785,53 @@
 				</div>-->
 			</section>
 
-			<!-- <section class="team-section section" style="padding-top: 0;">
+			<section class="team-section section" style="padding-top: 0;">				
 
-				<div class="container-fluid">
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Florian PETIT</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/aude-plassard.jpg" alt="Aude PLASSARD">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Aude PLASSARD</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Manuel YGUEL</h4>
+						</div>
+					</div>
+				</div>
+				<!-- <div class="container-fluid">
 					<div class="team-row row" style="margin-top: 0;">
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
@@ -838,8 +884,9 @@
 
 					</div>
 
-				</div>
-			</section>-->
+				</div>-->
+
+			</section>
 
 			<!--<section id="jury" class="team-section section">
 				<div class="container-fluid">
