--- a/index.html
+++ b/index.html
@@ -580,9 +580,18 @@
 								</div>
 							</div>
 						</div>
-
+						
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/frederic-cambecedes.jpg" alt="Fédéric CAMBECEDES">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Frédéric CAMBECEDES</h4>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/veronique-campillo.jpg" alt="Véronique CAMPILLO">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Véronique CAMPILLO</h4>
@@ -591,7 +600,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Sabine CULLMANN">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Sabine CULLMANN</h4>
@@ -600,7 +609,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Tamim DAOUDI</h4>
@@ -609,20 +618,11 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Yan-Erik DECORDE</h4>
 								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/olivier-gramling.jpg" alt="Olivier GRAMLING">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Olivier GRAMLING</h4>
-								</div>								
 							</div>
 						</div>
 
@@ -672,6 +672,15 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/olivier-gramling.jpg" alt="Olivier GRAMLING">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Olivier GRAMLING</h4>
+						</div>								
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/marie-hunyadi.jpg" alt="Marie HUNYADI">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Marie HUNYADI</h4>
@@ -680,7 +689,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Yannick JOST</h4>
@@ -689,7 +698,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/elalami-lafkih.jpg" alt="Elalami LAFKIH">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Elalami LAFKIH</h4>
@@ -698,7 +707,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/arnaud-laprevote.jpg" alt="Arnaud LAPRÉVOTE">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Arnaud LAPRÉVOTE</h4>
@@ -707,7 +716,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Axel NEVEUX</h4>
@@ -715,17 +724,7 @@
 					</div>
 				</div>
 
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/alban-petit.jpg" alt="Alban PETIT">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Alban PETIT</h4>
-						</div>
-					</div>
-				</div>
-
-				<!--<div class="container-fluid">
-					<div class="team-row row" style="margin-top: 0;">
+				<!--
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
@@ -778,17 +777,22 @@
 									<h4 class="team-member-name">Manuel YGUEL</h4>
 								</div>
 							</div>
-						</div>
-
-					</div>
-
-				</div>-->
+						</div>-->
 			</section>
 
 			<section class="team-section section" style="padding-top: 0;">				
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/alban-petit.jpg" alt="Alban PETIT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Alban PETIT</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Florian PETIT</h4>
@@ -797,7 +801,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
@@ -806,10 +810,19 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/aude-plassard.jpg" alt="Aude PLASSARD">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Aude PLASSARD</h4>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/florence-remy.jpg" alt="Florence REMY">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Florence REMY</h4>
 						</div>
 					</div>
 				</div>
@@ -823,14 +836,6 @@
 					</div>
 				</div>
 
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Manuel YGUEL</h4>
-						</div>
-					</div>
-				</div>
 				<!-- <div class="container-fluid">
 					<div class="team-row row" style="margin-top: 0;">
 
@@ -885,6 +890,19 @@
 					</div>
 
 				</div>-->
+
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">	
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Manuel YGUEL</h4>
+						</div>
+					</div>
+				</div>
 
 			</section>
 
