--- a/index.html
+++ b/index.html
@@ -577,6 +577,7 @@
 								<img class="team-member-picture" src="images/contents/coach/stephane-badts.jpg" alt="Stéphane BADTS">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Stéphane BADTS</h4>
+									<div class="team-member-position">XFive</div>
 								</div>
 							</div>
 						</div>
@@ -586,6 +587,7 @@
 								<img class="team-member-picture" src="images/contents/coach/frederic-cambecedes.jpg" alt="Fédéric CAMBECEDES">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Frédéric CAMBECEDES</h4>
+									<div class="team-member-position">Business angel</div>
 								</div>
 							</div>
 						</div>
@@ -595,33 +597,37 @@
 								<img class="team-member-picture" src="images/contents/coach/veronique-campillo.jpg" alt="Véronique CAMPILLO">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Véronique CAMPILLO</h4>
+									<div class="team-member-position">Pitch training</div>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Sabine CULLMANN">
+								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="René CARRAZ">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Sabine CULLMANN</h4>
+									<h4 class="team-member-name">René CARRAZ</h4>
+									<div class="team-member-position">ACCRO</div>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
+								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Sabine CULLMANN">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Tamim DAOUDI</h4>
+									<h4 class="team-member-name">Sabine CULLMANN</h4>
+									<div class="team-member-position">Gestion de projet et innovation</div>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
+								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Yan-Erik DECORDE</h4>
+									<h4 class="team-member-name">Tamim DAOUDI</h4>
+									<div class="team-member-position">Designer industriel</div>
 								</div>
 							</div>
 						</div>
@@ -672,139 +678,94 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Yan-Erik DECORDE</h4>
+							<div class="team-member-position">Coach perso et business</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/olivier-gramling.jpg" alt="Olivier GRAMLING">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Olivier GRAMLING</h4>
+							<div class="team-member-position">Expert comptable</div>
 						</div>								
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/marie-hunyadi.jpg" alt="Marie HUNYADI">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Marie HUNYADI</h4>
+							<div class="team-member-position">Communication digitale</div>
 						</div>								
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Yannick JOST</h4>
+							<div class="team-member-position">Strataggem - Objets connectés</div>
 						</div>								
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/elalami-lafkih.jpg" alt="Elalami LAFKIH">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Elalami LAFKIH</h4>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/arnaud-laprevote.jpg" alt="Arnaud LAPRÉVOTE">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Arnaud LAPRÉVOTE</h4>
+							<div class="team-member-position">Pretotyping</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
+						<img class="team-member-picture" src="images/contents/coach/arnaud-laprevote.jpg" alt="Arnaud LAPRÉVOTE">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Axel NEVEUX</h4>
+							<h4 class="team-member-name">Arnaud LAPRÉVOTE</h4>
+							<div class="team-member-position">Développement de projet </div>
 						</div>
 					</div>
 				</div>
 
-				<!--
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/dominique-vive.jpg" alt="Dominique VIVE">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Dominique VIVE</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/marc-lehman.jpg" alt="Marc LEHMAN">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Marc LEHMAN</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="hidden-md hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="hidden-sm hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/tamim-daoudi.jpg" alt="Tamim DAOUDI">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Tamim DAOUDI</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="hidden-md hidden-lg clear"></div>
-
-						
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Manuel YGUEL</h4>
-								</div>
-							</div>
-						</div>-->
 			</section>
 
 			<section class="team-section section" style="padding-top: 0;">				
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/alban-petit.jpg" alt="Alban PETIT">
+						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Alban PETIT</h4>
+							<h4 class="team-member-name">Axel NEVEUX</h4>
+							<div class="team-member-position">XFive</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
+						<img class="team-member-picture" src="images/contents/coach/alban-petit.jpg" alt="Alban PETIT">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Florian PETIT</h4>
+							<h4 class="team-member-name">Alban PETIT</h4>
+							<div class="team-member-position">CCI</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
+						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
+							<h4 class="team-member-name">Florian PETIT</h4>
+							<div class="team-member-position">Développement informatique</div>
 						</div>
 					</div>
 				</div>
@@ -814,82 +775,30 @@
 						<img class="team-member-picture" src="images/contents/coach/aude-plassard.jpg" alt="Aude PLASSARD">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Aude PLASSARD</h4>
+							<div class="team-member-position">Créativité</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/florence-remy.jpg" alt="Florence REMY">
+						<img class="team-member-picture" src="images/contents/coach/celine-poloce-winter.jpg" alt="Céline POLOCE-WINTER">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Florence REMY</h4>
+							<h4 class="team-member-name">Céline POLOCE-WINTER</h4>
+							<div class="team-member-position">Ingénieur télécom</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
+						<img class="team-member-picture" src="images/contents/coach/florence-remy.jpg" alt="Florence REMY">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
+							<h4 class="team-member-name">Florence REMY</h4>
+							<div class="team-member-position">Marketing</div>
 						</div>
 					</div>
 				</div>
-
-				<!-- <div class="container-fluid">
-					<div class="team-row row" style="margin-top: 0;">
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/francois-huynh.jpg" alt="">
-								<div class="team-member-text">
-									<h4 class="team-member-name">François HUYNH</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/yasin-sayin.jpg" alt="Yasin SAYIN">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Yasin SAYIN</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="hidden-md hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="no photo available">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Thongchai CHINGHATAM</h4>
-								</div>
-							</div>
-						</div>
-
-						<div class="hidden-sm hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-							</div>
-						</div>
-
-						<div class="hidden-md hidden-lg clear"></div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-							</div>
-						</div>
-
-					</div>
-
-				</div>-->
 
 			</section>
 
@@ -897,9 +806,30 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Bastien STELLA">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Bastien STELLA</h4>
+							<div class="team-member-position">Expert comptable</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
+							<div class="team-member-position">Business opportunities</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
+							<div class="team-member-position">Strataggem - Objets connectés</div>
 						</div>
 					</div>
 				</div>
